<resources>
    <string name="app_name">Kurdistan Borsa</string>
    <string name="title_registration">Sign Up</string>
    <string name="title_login">Login</string>
    <string name="title_market">Market</string>
    <string name="title_borsa">Borsa</string>
    <string name="title_notifications">Notification</string>
    <string name="title_settings">Settings</string>
    <string name="title_logout">Logout</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="title_profile">Profile</string>
    <string name="title_contactUs">Contact Us</string>
    <string name="small_font_btn">Small</string>
    <string name="medium_font_btn">Medium</string>
    <string name="large_font_btn">Large</string>

    <string name="select_language">Change App Language</string>
    <string name="notifications">Notifications</string>
    <string name="english_lan">English</string>
    <string name="gujarati_lan">Gujarati</string>
    <string name="arabic_lan">عربي</string>
    <string name="kurdish_lan">کوردی</string>

    <string name="login_title_market">Kurdistan Market</string>
    <string name="login_title_borsa">Iraqi Borsa</string>
    <string name="username">Username</string>
    <string name="username_colon">Username  :</string>
    <string name="password">Password</string>
    <string name="password_colon">Password  :</string>
    <string name="expiry_date_colon">Expiry Date  :</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="share_app">Share App</string>
    <string name="bottom_sheet_title">Share Kurdistan Borsa - Iraq</string>

    <string name="spinner_title">Select Language</string>
    <string name="save_settings">Save Settings</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_colon">Mobile Number  :</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="ask">Ask</string>
    <string name="bid">Bid</string>
    <string name="name">Name</string>

    <string name="enter_valid_mobile">Please enter valid mobile number</string>
    <string name="enter_password">Please enter password</string>
    <string name="mobile_not_less_than">Phone number should not be less than 11 digits</string>
    <string name="field_cannot_empty">Field can not be empty</string>

    <string name="please_back_again">Please click Back again to exit</string>
    <string name="connection_timeout">Connection Timeout</string>
    <string name="login_success">Login Successfully</string>
    <string name="no_internet_available">No internet available. Please check your internet connection and try again.
    </string>
    <string name="exit">Exit</string>
    <string name="retry">Retry</string>
    <string name="signup_success">Signup Successfully</string>
    <string name="forgot_success">Forgot Password Successfully</string>
    <string name="logout_success">Logout Successfully</string>
    <string name="successfully_updated">Successfully updated</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="swipe_left_borsa">Watchlist is empty! \n Add to watchlist by swiping left from Borsa list.</string>
    <string name="swipe_left_market">Watchlist is empty! \n Add to watchlist by swiping left from Market list.</string>
    <string name="swipe_right">Swipe from right to delete item.</string>

    <string name="are_you_sure_logout">Are you sure want to logout?</string>
    <string name="yes">Yes</string>
    <string name="ok">Ok</string>

    <string name="your_account_expiry">Your account is about to expire on date:</string>


    <string-array name="SpinnerLanguageArray">
        <item>@string/english_lan</item>
        <item>@string/kurdish_lan</item>
        <item>@string/arabic_lan</item>
        <!--<item>@string/gujarati_lan</item>-->
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
