<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color">

    <TextView
            android:id="@+id/name"
            android:text="@string/from"
            android:textColor="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"/>
    <TextView
            android:id="@+id/textView4"
            android:text="@string/to"
            android:textColor="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            android:layout_marginEnd="4dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:id="@+id/textView7"
            android:text="@string/ask"
            android:textColor="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"/>

    <TextView
            android:id="@+id/textView6"
            android:text="@string/bid"
            android:textColor="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline7"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent=".50"
            android:id="@+id/guideline"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent=".25"
            android:id="@+id/guideline2"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent=".75"
            android:id="@+id/guideline7"/>

</androidx.constraintlayout.widget.ConstraintLayout>