<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.SettingFragment">

    <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/select_language"
            android:textColor="@color/green_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/nestedConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp">

        <TextView
                android:id="@+id/spinnerLanguage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/green_border"
                android:drawableEnd="@drawable/ic_keyboard_arrow_down_black_24dp"
                android:gravity="start"
                android:layoutDirection="locale"
                android:text="@string/spinner_title"
                android:textAlignment="gravity"
                android:textColor="@color/white_text"
                android:textDirection="locale"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/spinnerLanguageRTL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/green_border"
                android:drawableEnd="@drawable/ic_keyboard_arrow_down_black_24dp"
                android:gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/spinner_title"
                android:textAlignment="gravity"
                android:textColor="@color/white_text"
                android:textDirection="rtl"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/notificationSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textDirection="locale"
            app:trackTint="@color/switch_selector"
            app:thumbTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            />

    <TextView
            android:id="@+id/tvContactNumberInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textDirection="locale"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notificationSwitch"
            tools:text="undefined" />

    <Button
            android:id="@+id/btnShareApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/green_border"
            android:text="@string/share_app"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnSaveSetting" />

    <Button
            android:id="@+id/btnSaveSetting"
            android:text="@string/save_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@color/green"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="Contact Number"
            android:textColor="@color/green_text"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nestedConstraint" />

</androidx.constraintlayout.widget.ConstraintLayout>