<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipeRefresh_items"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RadioGroup
                android:id="@+id/fontSizeBTN"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="50dp"
                app:layout_constraintTop_toTopOf="parent">
            <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/smallBTN"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/small_font_btn"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:checked="true"
                    android:button="@android:color/transparent"
                    android:background="@drawable/rb_small_selector"/>
            <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/mediumBTN"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/medium_font_btn"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:checked="false"
                    android:button="@android:color/transparent"
                    android:background="@drawable/rb_medium_selector"/>
            <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/largeBTN"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/large_font_btn"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:checked="false"
                    android:button="@android:color/transparent"
                    android:background="@drawable/rb_large_selector"/>
        </RadioGroup>

        <include
                android:id="@+id/header"
                layout="@layout/header_layout_borsa"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fontSizeBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scrollbars="vertical"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>